0x01-variables_if_else_while/0-positive_or_negative.c:1:9:
nclude��<stdio.h>
      |         ^
0-positive_or_negative.c: In function ‘main’:
0-positive_or_negative.c:16:1: error: implicit declaration of function ‘printf’ [-Werror=implicit-function-declaration]
   16 | printf("%d is negative\n", n);
      | ^~~~~~
0-positive_or_negative.c:16:1: error: incompatible implicit declaration of built-in function ‘printf’ [-Werror]
0-positive_or_negative.c:4:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
    3 | #include <time.h>
  +++ |+#include <stdio.h>
    4 | 
0-positive_or_negative.c:20:1: error: incompatible implicit declaration of built-in function ‘printf’ [-Werror]
   20 | printf("%d is positive\n", n);
      | ^~~~~~
0-positive_or_negative.c:20:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
0-positive_or_negative.c:24:1: error: incompatible implicit declaration of built-in function ‘printf’ [-Werror]
   24 | printf("%d is zero\n", n);
      | ^~~~~~
0-positive_or_negative.c:24:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
cc1: all warnings being treated as errors
root@1d8d7b1ff210:~/alx-low_level_programming/0x01-variables_if_else_while#

